--- a/package.json
+++ b/package.json
@@ -15,12 +15,21 @@
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "^7.8.3",
+    "@material-ui/core": "^4.11.2",
     "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
+    "bootstrap": "^4.5.3",
+    "bootstrap-3-card": "^0.2.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "material-ui": "^0.20.2",
+    "mysql": "^2.18.1",
     "path": "^0.12.7",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.4.0",
+    "react-bootstrap-tabs": "^2.0.0",
     "react-dom": "^16.13.1",
+    "use-constant": "^1.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   }
