--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-tabs": "^2.0.0",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^16.13.1",
     "style-loader": "^2.0.0",
     "use-constant": "^1.1.0",
