--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.1.2",
     "@emotion/styled": "^11.0.0",
-    "@material-ui/core": "^5.0.0-alpha.19",
+    "@material-ui/core": "^5.0.0-alpha.20",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
     "bootstrap": "^4.5.3",
@@ -28,17 +29,20 @@
     "express": "^4.17.1",
     "install": "^0.13.0",
     "jquery": "^3.5.1",
+    "material-table": "^1.69.2",
     "material-ui": "^0.20.2",
     "mysql": "^2.18.1",
     "npm": "^7.2.0",
     "path": "^0.12.7",
     "popper": "^1.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-tabs": "^2.0.0",
     "react-datepicker": "^3.3.0",
     "react-datetime-picker": "^3.0.4",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "style-loader": "^2.0.0",
     "use-constant": "^1.1.0",
     "webpack": "^4.43.0",
