--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-datepicker": "^3.3.0",
     "react-datetime-picker": "^3.0.4",
     "react-dom": "^16.13.1",
+    "react-fontawesome": "^1.7.1",
     "react-router-dom": "^5.2.0",
     "style-loader": "^2.0.0",
     "use-constant": "^1.1.0",
