--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,9 @@
     "development": {
       "presets": [["@babel/preset-react", { "development": true }]]
     }
-  }
+  },
+  "plugins": [
+    // ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties"]
+  ]
 }
