--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.10.5",
-    "@babel/preset-env": "^7.10.3",
-    "@babel/preset-react": "^7.8.3",
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
     "@emotion/core": "^11.0.0",
-    "@emotion/react": "^11.1.2",
+    "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@material-ui/core": "^5.0.0-alpha.20",
+    "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
-    "axios": "^0.19.2",
-    "babel-cli": "^6.26.0",
-    "babel-loader": "^8.1.0",
+    "axios": "^0.21.1",
+    "babel-loader": "^8.2.2",
     "bootstrap": "^4.5.3",
     "bootstrap-3-card": "^0.2.0",
     "cors": "^2.8.5",
     "css-loader": "^5.0.1",
+    "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "install": "^0.13.0",
@@ -38,7 +38,7 @@
     "material-table": "^1.69.2",
     "material-ui": "^0.20.2",
     "mysql": "^2.18.1",
-    "npm": "^7.2.0",
+    "npm": "^7.3.0",
     "path": "^0.12.7",
     "popper": "^1.0.1",
     "prop-types": "^15.7.2",
@@ -47,12 +47,16 @@
     "react-bootstrap-tabs": "^2.0.0",
     "react-datepicker": "^3.3.0",
     "react-datetime-picker": "^3.0.4",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^5.2.0",
     "style-loader": "^2.0.0",
     "use-constant": "^1.1.0",
-    "webpack": "^4.43.0",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^7.0.0-bridge.0"
   }
 }
