added repo to package json

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "author": "",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+ https://github.com/cmurray1105/santaRitaBarbecue"
+  },
   "dependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
