--- a/package.json
+++ b/package.json
@@ -63,5 +63,5 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^7.0.0-bridge.0"
   },
-   "engines" : { "node" : ">=0.12" }
+   "engines" : { "node" : "v12.9.1" }
 }
