--- a/package.json
+++ b/package.json
@@ -30,8 +30,6 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
-    "bootstrap": "^4.5.3",
-    "bootstrap-3-card": "^0.2.0",
     "cors": "^2.8.5",
     "css-loader": "^5.0.1",
     "date-fns": "^2.16.1",
@@ -63,5 +61,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^7.0.0-bridge.0"
   },
-   "engines" : { "node" : "12.13.0" }
+  "engines": {
+    "node": "12.13.0"
+  }
 }
