--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@date-io/core": "^1.3.13",
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
@@ -42,14 +43,10 @@
     "mysql": "^2.18.1",
     "npm": "^7.3.0",
     "path": "^0.12.7",
-    "popper": "^1.0.1",
     "prop-types": "^15.7.2",
-    "react": "^16.14.0",
-    "react-bootstrap": "^1.4.0",
-    "react-bootstrap-tabs": "^2.0.0",
+    "react": "^17.0.1",
     "react-datepicker": "^3.3.0",
-    "react-datetime-picker": "^3.0.4",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.1",
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^5.2.0",
     "style-loader": "^2.0.0",
