--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
     "start-webpack": "webpack --watch --mode development --inline --progress",
-    "build": "babel server/server.js --out-file server/server.compiled.js"
+    "build": "babel server/server.js --out-file server/server.compiled.js",
+    "eb-start": "npm run build && npm run start"
   },
   "author": "",
   "license": "ISC",
