--- a/package.json
+++ b/package.json
@@ -30,28 +30,40 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@popperjs/core": "^2.6.0",
+    "awesome": "0.0.7",
+    "aws-sdk": "^2.843.0",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "cors": "^2.8.5",
     "css-loader": "^5.0.1",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
+    "emailjs": "^3.4.0",
+    "emailjs-com": "^2.6.4",
     "express": "^4.17.1",
     "install": "^0.13.0",
     "jquery": "^3.5.1",
     "material-table": "^1.69.2",
     "material-ui": "^0.20.2",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "mysql": "^2.18.1",
     "npm": "^7.3.0",
     "path": "^0.12.7",
+    "popper": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-datepicker": "^3.3.0",
+    "react-datepicker": "^3.4.1",
+    "react-day-picker": "^7.4.8",
     "react-dom": "^17.0.1",
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^5.2.0",
+    "router": "^1.3.5",
     "style-loader": "^2.0.0",
+    "styled-components": "^5.2.1",
     "use-constant": "^1.1.0",
+    "web-vitals": "^1.1.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   },
