--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "mysql": "^2.18.1",
+    "newrelic": "^7.1.2",
     "npm": "^7.3.0",
     "path": "^0.12.7",
     "popper": "^1.0.1",
