--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,7 @@
   },
   "plugins": [
     // ["@babel/plugin-proposal-decorators", { "legacy": true }],
-    ["@babel/plugin-proposal-class-properties"]
+    ["@babel/plugin-proposal-class-properties"],
+    ["@babel/plugin-transform-react-jsx"]
   ]
 }
