--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "url": "git+ https://github.com/cmurray1105/santaRitaBarbecue"
   },
   "dependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
+    "@babel/cli": "^7.13.0",
+    "@babel/core": "^7.13.8",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@date-io/core": "^1.3.13",
@@ -68,10 +68,7 @@
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^7.0.0-bridge.0"
-  },
+  "devDependencies": {},
   "engines": {
     "node": "12.18.3"
   }
