--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.compiled.js",
-    "start-webpack": "webpack --watch --mode development --inline --progress",
+    "start-webpack": "webpack --watch",
     "build": "babel server/server.js --out-file server/server.compiled.js",
     "eb-start": "npm run build && npm run start"
   },
@@ -17,7 +17,7 @@
     "url": "git+ https://github.com/cmurray1105/santaRitaBarbecue"
   },
   "dependencies": {
-    "@babel/cli": "^7.13.0",
+    "@babel/cli": "^7.12.1",
     "@babel/core": "^7.13.8",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
@@ -44,8 +44,8 @@
     "express": "^4.17.1",
     "install": "^0.13.0",
     "jquery": "^3.5.1",
-    "material-table": "^1.69.2",
-    "material-ui": "^0.20.2",
+    "material-table": "^1.63.0",
+    "material-ui": "^0.15.0",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "mysql": "^2.18.1",
@@ -65,10 +65,9 @@
     "styled-components": "^5.2.1",
     "use-constant": "^1.1.0",
     "web-vitals": "^1.1.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^5.59.0",
+    "webpack-cli": "^4.9.1"
   },
-  "devDependencies": {},
   "engines": {
     "node": "12.18.3"
   }
